FEE-771: fixed issue with error message covering step navigation

--- a/src/wizard/_wizard.scss
+++ b/src/wizard/_wizard.scss
@@ -89,6 +89,10 @@ $wizard-step-count-max: 5;
     li:last-child:after {
       display:none;
     }
+
+    &.error {
+      margin-top: 54px;
+    }
   }
 
 
